--- a/lesson2/Lesson 2, Exercise 2 - Endpoints.ipynb
+++ b/lesson2/Lesson 2, Exercise 2 - Endpoints.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,19 +42,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['The product does exactly as it should and is quite affordable', 'I did not realized it was double screened until it arrived, so it was even better than I had expected', \"As an added bonus, one of the screens carries a small hint of the smell of an old grape candy I used to buy, so for reminiscent's sake, I cannot stop putting the pop filter next to my nose and smelling it after recording\", ' :DIf you needed a pop filter, this will work just as well as the expensive ones, and it may even come with a pleasing aroma like mine did!Buy this product! :]', 'The primary job of this device is to block the breath that would otherwise produce a popping sound, while allowing your voice to pass through with no noticeable reduction of volume or high frequencies', ' The double cloth filter blocks the pops and lets the voice through with no coloration', ' The metal clamp mount attaches to the mike stand secure enough to keep it attached', ' The goose neck needs a little coaxing to stay where you put it', 'Monster makes a wide array of cables, including some that are very high end']\n"
+      "['__label__1 The product does exactly as it should and is quite affordable', '__label__1 I did not realized it was double screened until it arrived, so it was even better than I had expected', \"__label__1 As an added bonus, one of the screens carries a small hint of the smell of an old grape candy I used to buy, so for reminiscent's sake, I cannot stop putting the pop filter next to my nose and smelling it after recording\", '__label__1  :DIf you needed a pop filter, this will work just as well as the expensive ones, and it may even come with a pleasing aroma like mine did!Buy this product! :]', '__label__1 The primary job of this device is to block the breath that would otherwise produce a popping sound, while allowing your voice to pass through with no noticeable reduction of volume or high frequencies', '__label__1  The double cloth filter blocks the pops and lets the voice through with no coloration', '__label__1  The metal clamp mount attaches to the mike stand secure enough to keep it attached', '__label__1  The goose neck needs a little coaxing to stay where you put it', '__label__1 Monster makes a wide array of cables, including some that are very high end']\n"
      ]
     }
    ],
    "source": [
     "# Function below unzips the archive to the local directory. \n",
+    "import zipfile\n",
     "\n",
     "def unzip_data(input_data_path):\n",
     "    with zipfile.ZipFile(input_data_path, 'r') as input_data_zip:\n",
@@ -102,15 +103,16 @@
     "\n",
     "def split_sentences(labeled_data):\n",
     "    new_split_sentences = []\n",
-    "    for d in labeled_data:       \n",
+    "    for d in labeled_data: \n",
+    "        label = d.split()[0] \n",
     "        sentences = \" \".join(d.split()[1:]).split(\".\") # Initially split to separate label, then separate sentences\n",
     "        for s in sentences:\n",
     "            if s: # Make sure sentences isn't empty. Common w/ \"...\"\n",
-    "                new_split_sentences.append(s)\n",
+    "                new_split_sentences.append(\" \".join([label, s]))\n",
     "    return new_split_sentences\n",
     "\n",
     "\n",
-    "unzip_data('reviews_Musical_Instruments_5.json.zip')\n",
+    "input_data = unzip_data('reviews_Musical_Instruments_5.json.zip')\n",
     "labeled_data = label_data('reviews_Musical_Instruments_5.json')\n",
     "new_split_sentence_data = split_sentences(labeled_data)\n",
     "\n",
@@ -143,22 +145,30 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----!"
+     ]
+    }
+   ],
    "source": [
     "from sagemaker import get_execution_role\n",
     "from sagemaker.model import Model\n",
     "from sagemaker import image_uris\n",
     "\n",
     "# get the execution role\n",
-    "role =\n",
+    "role = get_execution_role()\n",
     "# get the image using the \"blazingtext\" framework and your region\n",
-    "image_uri = \n",
+    "image_uri = image_uris.retrieve(framework='blazingtext',region='us-east-1')\n",
     "# get the S3 location of a SageMaker model data\n",
-    "model_data = \n",
+    "model_data = \"s3://udacity-ml-workflow/hello-blaze-lesson2-ex1/output-hello-blaze/hello-blaze-2022/output/model.tar.gz\"\n",
     "# define a model object\n",
-    "model =\n",
+    "model = Model(image_uri=image_uri, model_data=model_data, role=role)\n",
     "# deploy the model using a single instance of \"ml.m5.large\"\n",
-    "predictor = "
+    "predictor = model.deploy(initial_instance_count=1, instance_type=\"ml.m5.large\")"
    ]
   },
   {
@@ -185,24 +195,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"instances\": [\"The product does exactly as it should and is quite affordable\", \"I did not realized it was double screened until it arrived, so it was even better than I had expected\", \"As an added bonus, one of the screens carries a small hint of the smell of an old grape candy I used to buy, so for reminiscent's sake, I cannot stop putting the pop filter next to my nose and smelling it after recording\", \" :DIf you needed a pop filter, this will work just as well as the expensive ones, and it may even come with a pleasing aroma like mine did!Buy this product! :]\", \"The primary job of this device is to block the breath that would otherwise produce a popping sound, while allowing your voice to pass through with no noticeable reduction of volume or high frequencies\"]}\n",
+      "[{'label': ['__label__1'], 'prob': [0.8764442801475525]}, {'label': ['__label__1'], 'prob': [0.8680763244628906]}, {'label': ['__label__1'], 'prob': [0.8884254693984985]}, {'label': ['__label__1'], 'prob': [0.8055267930030823]}, {'label': ['__label__1'], 'prob': [0.9106743335723877]}]\n"
+     ]
+    }
+   ],
    "source": [
     "from sagemaker.predictor import Predictor\n",
     "import json\n",
     "\n",
-    "predictor = \n",
+    "predictor = Predictor(\"blazingtext-2022-01-11-17-08-56-963\")\n",
     "\n",
     "# load the first five reviews from new_split_sentence_data\n",
-    "example_sentences = \n",
+    "example_sentences = new_split_sentence_data[0:5]\n",
     "\n",
     "payload = {\"instances\": example_sentences}\n",
     "\n",
     "print(json.dumps(payload))\n",
     "\n",
     "# make predictions using the \"predict\" method. Set initial_args to {'ContentType': 'application/json'}\n",
-    "predictions = \n",
+    "predictions = json.loads(predictor.predict(json.dumps(payload), initial_args={'ContentType': 'application/json'}))\n",
     "\n",
     "print(predictions)"
    ]
@@ -216,19 +235,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "predictor.delete_endpoint()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "python3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
@@ -240,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
