--- a/lesson2/Lesson 2, Exercise 3 - Batch Transform.ipynb
+++ b/lesson2/Lesson 2, Exercise 3 - Batch Transform.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e342763",
    "metadata": {},
    "source": [
     "# UDACITY SageMaker Essentials: Batch Transform"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "035b3eee",
    "metadata": {},
    "source": [
     "In the last exercise, we asked you to reflect on the disadvantages of having to perform preprocessing on a local machine. In addition to those disadvantages, such as user error and hardware limitations, you may have also encountered another frustration in submitting a large amount of data to an endpoint. There may be network limitations on your end, there may be security/privacy concerns, and there might be an obvious performance advantage in parallelism that may be difficult to implement. "
@@ -18,7 +16,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fc794fe",
    "metadata": {},
    "source": [
     "Batch transform essentially addresses all of these issues. The primary use case for this is to make an inference on a dataset rather than making many individual calls to an endpoint. AWS SageMaker, similar to other tools that we encountered, does the heavy implementation lifting of reading data and splitting the burden among instances. All that's required of us is to give batch transform the correct directions to the data we want to submit. "
@@ -26,7 +23,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae54cdc1",
    "metadata": {},
    "source": [
     "Alas, this dataset is unfortunately not quite in the correct format to be properly digested by batch transform. Although this tool is capable of digesting lists of json objects, it is not capable of the processing operations that we would ideally perform on it. So, yet again, we must preprocess data. "
@@ -34,7 +30,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "887aa98f",
    "metadata": {},
    "source": [
     "## Exercise: Preprocess (again, again) and upload to S3"
@@ -42,7 +37,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "692a223d",
    "metadata": {},
    "source": [
     "The cell below provides you two functions. The `split_sentences` preprocesses the reviews and you should be very familiar with function. Remember that the BlazingText expects a input with JSON format, the `cycle_data` formats the review to the following: {'source': 'THIS IS A SAMPLE SENTENCE'} and writes it into a file.\n",
@@ -54,15 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "03829953",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "//\n"
+      "s3://udacity-ml-workflow/batch-transform/music-instruments-reviews.txt\n"
      ]
     }
    ],
@@ -73,13 +66,13 @@
     "import zipfile\n",
     "\n",
     "# Todo: Input the s3 bucket\n",
-    "s3_bucket = \"CHANGE THIS\"\n",
+    "s3_bucket = \"udacity-ml-workflow\"\n",
     "\n",
     "# Todo: Input the s3 prefix\n",
-    "s3_prefix = \"CHANGE THIS\"\n",
+    "s3_prefix = \"batch-transform\"\n",
     "\n",
     "# Todo: Input the the file to write the data to\n",
-    "file_name = \"CHANGE THIS\"\n",
+    "file_name = \"music-instruments-reviews.txt\"\n",
     "\n",
     "# Function below unzips the archive to the local directory. \n",
     "\n",
@@ -110,14 +103,20 @@
     "\n",
     "# Todo: write a function to upload the data to s3\n",
     "def upload_file_to_s3(file_name, s3_prefix):\n",
-    "    return\n",
+    "    object_name = os.path.join(s3_prefix, file_name)\n",
+    "    s3_client = boto3.client('s3')\n",
+    "    try:\n",
+    "        response = s3_client.upload_file(file_name, s3_bucket, object_name)\n",
+    "    except ClientError as e:\n",
+    "        logging.error(e)\n",
+    "        return False\n",
     "\n",
     "\n",
     "# Unzips file.\n",
     "unzip_data('reviews_Musical_Instruments_5.json.zip')\n",
     "\n",
     "# Todo: preprocess reviews_Musical_Instruments_5.json \n",
-    "sentences = split_sentences('')\n",
+    "sentences = split_sentences('reviews_Musical_Instruments_5.json')\n",
     "\n",
     "# Write data to a file and upload it to s3.\n",
     "with open(file_name, 'w') as f:\n",
@@ -133,7 +132,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5724938c",
    "metadata": {},
    "source": [
     "## Exercise: Use Batch Transform to perform an inference on the dataset"
@@ -141,7 +139,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3b34d68",
    "metadata": {},
    "source": [
     "We utilize batch transform through a transformer object. Similar to how we initialized a predictor object in the last exercise, complete the code below to initialize a transformer object and launch a transform job.   \n",
@@ -160,10 +157,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "94c8c613",
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "..................................\u001b[34mArguments: serve\u001b[0m\n",
+      "\u001b[34m[01/11/2022 18:50:28 INFO 140560943244672] Finding and loading model\u001b[0m\n",
+      "\u001b[34m[01/11/2022 18:50:28 INFO 140560943244672] Trying to load model from /opt/ml/model/model.bin\u001b[0m\n",
+      "\u001b[34m[01/11/2022 18:50:28 INFO 140560943244672] Number of server workers: 4\u001b[0m\n",
+      "\u001b[34m[2022-01-11 18:50:28 +0000] [1] [INFO] Starting gunicorn 19.7.1\u001b[0m\n",
+      "\u001b[34m[2022-01-11 18:50:28 +0000] [1] [INFO] Listening at: http://0.0.0.0:8080 (1)\u001b[0m\n",
+      "\u001b[34m[2022-01-11 18:50:28 +0000] [1] [INFO] Using worker: sync\u001b[0m\n",
+      "\u001b[34m[2022-01-11 18:50:28 +0000] [35] [INFO] Booting worker with pid: 35\u001b[0m\n",
+      "\u001b[34m[2022-01-11 18:50:28 +0000] [36] [INFO] Booting worker with pid: 36\u001b[0m\n",
+      "\u001b[34m[2022-01-11 18:50:29 +0000] [37] [INFO] Booting worker with pid: 37\u001b[0m\n",
+      "\u001b[34m[2022-01-11 18:50:29 +0000] [38] [INFO] Booting worker with pid: 38\u001b[0m\n",
+      "\u001b[35mArguments: serve\u001b[0m\n",
+      "\u001b[35m[01/11/2022 18:50:28 INFO 140560943244672] Finding and loading model\u001b[0m\n",
+      "\u001b[35m[01/11/2022 18:50:28 INFO 140560943244672] Trying to load model from /opt/ml/model/model.bin\u001b[0m\n",
+      "\u001b[35m[01/11/2022 18:50:28 INFO 140560943244672] Number of server workers: 4\u001b[0m\n",
+      "\u001b[35m[2022-01-11 18:50:28 +0000] [1] [INFO] Starting gunicorn 19.7.1\u001b[0m\n",
+      "\u001b[35m[2022-01-11 18:50:28 +0000] [1] [INFO] Listening at: http://0.0.0.0:8080 (1)\u001b[0m\n",
+      "\u001b[35m[2022-01-11 18:50:28 +0000] [1] [INFO] Using worker: sync\u001b[0m\n",
+      "\u001b[35m[2022-01-11 18:50:28 +0000] [35] [INFO] Booting worker with pid: 35\u001b[0m\n",
+      "\u001b[35m[2022-01-11 18:50:28 +0000] [36] [INFO] Booting worker with pid: 36\u001b[0m\n",
+      "\u001b[35m[2022-01-11 18:50:29 +0000] [37] [INFO] Booting worker with pid: 37\u001b[0m\n",
+      "\u001b[35m[2022-01-11 18:50:29 +0000] [38] [INFO] Booting worker with pid: 38\u001b[0m\n",
+      "\u001b[32m2022-01-11T18:50:32.241:[sagemaker logs]: MaxConcurrentTransforms=4, MaxPayloadInMB=6, BatchStrategy=MULTI_RECORD\u001b[0m\n",
+      "\n",
+      "\u001b[34mArguments: serve\u001b[0m\n",
+      "\u001b[34m[01/11/2022 18:50:28 INFO 140560943244672] Finding and loading model\u001b[0m\n",
+      "\u001b[34m[01/11/2022 18:50:28 INFO 140560943244672] Trying to load model from /opt/ml/model/model.bin\u001b[0m\n",
+      "\u001b[34m[01/11/2022 18:50:28 INFO 140560943244672] Number of server workers: 4\u001b[0m\n",
+      "\u001b[34m[2022-01-11 18:50:28 +0000] [1] [INFO] Starting gunicorn 19.7.1\u001b[0m\n",
+      "\u001b[34m[2022-01-11 18:50:28 +0000] [1] [INFO] Listening at: http://0.0.0.0:8080 (1)\u001b[0m\n",
+      "\u001b[34m[2022-01-11 18:50:28 +0000] [1] [INFO] Using worker: sync\u001b[0m\n",
+      "\u001b[34m[2022-01-11 18:50:28 +0000] [35] [INFO] Booting worker with pid: 35\u001b[0m\n",
+      "\u001b[34m[2022-01-11 18:50:28 +0000] [36] [INFO] Booting worker with pid: 36\u001b[0m\n",
+      "\u001b[34m[2022-01-11 18:50:29 +0000] [37] [INFO] Booting worker with pid: 37\u001b[0m\n",
+      "\u001b[34m[2022-01-11 18:50:29 +0000] [38] [INFO] Booting worker with pid: 38\u001b[0m\n",
+      "\u001b[35mArguments: serve\u001b[0m\n",
+      "\u001b[35m[01/11/2022 18:50:28 INFO 140560943244672] Finding and loading model\u001b[0m\n",
+      "\u001b[35m[01/11/2022 18:50:28 INFO 140560943244672] Trying to load model from /opt/ml/model/model.bin\u001b[0m\n",
+      "\u001b[35m[01/11/2022 18:50:28 INFO 140560943244672] Number of server workers: 4\u001b[0m\n",
+      "\u001b[35m[2022-01-11 18:50:28 +0000] [1] [INFO] Starting gunicorn 19.7.1\u001b[0m\n",
+      "\u001b[35m[2022-01-11 18:50:28 +0000] [1] [INFO] Listening at: http://0.0.0.0:8080 (1)\u001b[0m\n",
+      "\u001b[35m[2022-01-11 18:50:28 +0000] [1] [INFO] Using worker: sync\u001b[0m\n",
+      "\u001b[35m[2022-01-11 18:50:28 +0000] [35] [INFO] Booting worker with pid: 35\u001b[0m\n",
+      "\u001b[35m[2022-01-11 18:50:28 +0000] [36] [INFO] Booting worker with pid: 36\u001b[0m\n",
+      "\u001b[35m[2022-01-11 18:50:29 +0000] [37] [INFO] Booting worker with pid: 37\u001b[0m\n",
+      "\u001b[35m[2022-01-11 18:50:29 +0000] [38] [INFO] Booting worker with pid: 38\u001b[0m\n",
+      "\u001b[32m2022-01-11T18:50:32.241:[sagemaker logs]: MaxConcurrentTransforms=4, MaxPayloadInMB=6, BatchStrategy=MULTI_RECORD\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "from sagemaker import get_execution_role\n",
     "from sagemaker.model import Model\n",
@@ -171,35 +221,39 @@
     "\n",
     "# Get the execution role\n",
     "\n",
-    "role = \n",
+    "role = get_execution_role()\n",
     "\n",
     "# Get the image uri using the \"blazingtext\" algorithm in your region. \n",
     "\n",
-    "image_uri = \n",
+    "image_uri = image_uris.retrieve(framework='blazingtext',region='us-east-1')\n",
     "\n",
     "# Get the model artifact from S3\n",
     "\n",
-    "model_data = \n",
+    "model_data = \"s3://udacity-ml-workflow/hello-blaze-lesson2-ex1/output-hello-blaze/hello-blaze-2022/output/model.tar.gz\"\n",
     "\n",
     "# Get the s3 path for the batch transform data\n",
     "\n",
-    "batch_transform_output_path = \n",
+    "batch_transform_output_path = \"s3://udacity-ml-workflow/batch-transform/batch-transform-output/\"\n",
     "\n",
     "# Define a model object\n",
     "\n",
-    "model = \n",
+    "model =  Model(image_uri=image_uri, model_data=model_data, role=role)\n",
     "\n",
     "# Define a transformer object, using a single instance ml.m4.xlarge. Specify an output path to your s3 bucket. \n",
     "\n",
-    "transformer = \n",
+    "transformer = model.transformer(\n",
+    "    instance_count = 1,\n",
+    "    instance_type = 'ml.m4.xlarge',\n",
+    "    output_path = batch_transform_output_path\n",
+    ")\n",
     "\n",
     "# Call the transform method. Set content_type='application/jsonlines', split_type='Line'\n",
     "\n",
     "transformer.transform(\n",
-    "    data=, \n",
-    "    data_type=,\n",
-    "    content_type=, \n",
-    "    split_type=\n",
+    "    data=batch_transform_input_path, \n",
+    "    data_type='S3Prefix',\n",
+    "    content_type='application/jsonlines', \n",
+    "    split_type='Line'\n",
     ")\n",
     "\n",
     "transformer.wait()\n"
@@ -207,7 +261,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f34ab01a",
    "metadata": {},
    "source": [
     "## Exercise: Sanity Check - Are Results the Same? "
@@ -215,7 +268,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a68319e",
    "metadata": {},
    "source": [
     "The results of the inference should be printed to the s3 path specified in batch_transform_output_path. We have evaluated the same data on the same model, so if all is done correctly on both exercises, the inferences should be the same. Compare the first five or so inferences on the last exercise and on this exercise to confirm this. "
@@ -223,10 +275,11 @@
   }
  ],
  "metadata": {
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "python3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
@@ -238,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
