--- a/lesson2/Lesson 2, Exercise 4 - Processing Job.ipynb
+++ b/lesson2/Lesson 2, Exercise 4 - Processing Job.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -150,27 +150,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "//\n"
+      "s3://udacity-ml-workflow/processing/toys-and-games/Toys_and_Games_5.json.zip\n"
      ]
     }
    ],
    "source": [
     "# Todo\n",
-    "s3_bucket = \"\"\n",
-    "s3_prefix = \"\"\n",
-    "file_name = \"\"\n",
+    "import os\n",
+    "import boto3\n",
     "\n",
-    "def upload_file_to_s3():\n",
-    "    return \n",
+    "s3_bucket = \"udacity-ml-workflow\"\n",
+    "s3_prefix = \"processing/toys-and-games\"\n",
+    "file_name  = \"Toys_and_Games_5.json.zip\"\n",
     "\n",
-    "source_path = \"/\".join([s3_bucket, s3_prefix, file_name])\n",
+    "def upload_file_to_s3(file_name):\n",
+    "    object_name = os.path.join(s3_prefix, file_name)\n",
+    "    s3_client = boto3.client('s3')\n",
+    "    try:\n",
+    "        response = s3_client.upload_file(file_name, s3_bucket, object_name)\n",
+    "    except ClientError as e:\n",
+    "        logging.error(e)\n",
+    "        return False\n",
+    "\n",
+    "upload_file_to_s3(file_name)\n",
+    "\n",
+    "source_path = \"s3://\" + \"/\".join([s3_bucket, s3_prefix, file_name])\n",
     "print(source_path)"
    ]
   },
@@ -207,9 +218,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Job Name:  sagemaker-scikit-learn-2022-01-11-20-25-52-392\n",
+      "Inputs:  [{'InputName': 'input-1', 'AppManaged': False, 'S3Input': {'S3Uri': 's3://udacity-ml-workflow/processing/toys-and-games/Toys_and_Games_5.json.zip', 'LocalPath': '/opt/ml/processing/input', 'S3DataType': 'S3Prefix', 'S3InputMode': 'File', 'S3DataDistributionType': 'FullyReplicated', 'S3CompressionType': 'None'}}, {'InputName': 'code', 'AppManaged': False, 'S3Input': {'S3Uri': 's3://sagemaker-us-east-1-934110659707/sagemaker-scikit-learn-2022-01-11-20-25-52-392/input/code/HelloBlazePreprocess.py', 'LocalPath': '/opt/ml/processing/input/code', 'S3DataType': 'S3Prefix', 'S3InputMode': 'File', 'S3DataDistributionType': 'FullyReplicated', 'S3CompressionType': 'None'}}]\n",
+      "Outputs:  [{'OutputName': 'output-1', 'AppManaged': False, 'S3Output': {'S3Uri': 's3://sagemaker-us-east-1-934110659707/sagemaker-scikit-learn-2022-01-11-20-25-52-392/output/output-1', 'LocalPath': '/opt/ml/processing/output/train', 'S3UploadMode': 'EndOfJob'}}, {'OutputName': 'output-2', 'AppManaged': False, 'S3Output': {'S3Uri': 's3://sagemaker-us-east-1-934110659707/sagemaker-scikit-learn-2022-01-11-20-25-52-392/output/output-2', 'LocalPath': '/opt/ml/processing/output/test', 'S3UploadMode': 'EndOfJob'}}]\n",
+      "..............................\n",
+      ".."
+     ]
+    }
+   ],
    "source": [
     "from sagemaker import get_execution_role\n",
     "from sagemaker.sklearn.processing import SKLearnProcessor\n",
@@ -217,23 +241,26 @@
     "\n",
     "# Get role\n",
     "\n",
-    "role = \n",
+    "role = get_execution_role()\n",
     "\n",
     "# Create an SKLearnProcessor. Set framework_version='0.20.0'.\n",
     "\n",
-    "sklearn_processor = \n",
+    "sklearn_processor = SKLearnProcessor(framework_version='0.20.0',\n",
+    "                                     role=role,\n",
+    "                                     instance_type='ml.m5.large',\n",
+    "                                     instance_count=1)\n",
     "\n",
     "# Start a run job. You will pass in as parameters the local location of the processing code, \n",
     "# a processing input object, two processing output objects. The paths that you pass in here are directories, \n",
     "# not the files themselves. Check the preprocessing code for a hint about what these directories should be. \n",
     "\n",
-    "sklearn_processor.run(code= , # preprocessing code\n",
+    "sklearn_processor.run(code= 'HelloBlazePreprocess.py', # preprocessing code\n",
     "                      inputs=[ProcessingInput(\n",
-    "                          source = , # the S3 path of the unprocessed data\n",
-    "                          destination= , # a 'local' directory path for the input to be downloaded into\n",
-    "                      )],\n",
-    "                      outputs=[ProcessingOutput(source= ),# a 'local' directory path for where you expect the output for train data to be\n",
-    "                               ProcessingOutput(source= )]) # a 'local' directory path for where you expect the output for test data to be "
+    "                      source=source_path, # the S3 path of the unprocessed data\n",
+    "                      destination= '/opt/ml/processing/input')], # a 'local' directory path for the input to be downloaded into\n",
+    "                      outputs=[ProcessingOutput(source='/opt/ml/processing/output/train'),# a 'local' directory path for where you expect the output for train data to be\n",
+    "                               ProcessingOutput(source= '/opt/ml/processing/output/test')]\n",
+    "                     )# a 'local' directory path for where you expect the output for test data to be "
    ]
   },
   {
@@ -252,9 +279,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ProcessingInputs': [{'InputName': 'input-1',\n",
+       "   'AppManaged': False,\n",
+       "   'S3Input': {'S3Uri': 's3://udacity-ml-workflow/processing/toys-and-games/Toys_and_Games_5.json.zip',\n",
+       "    'LocalPath': '/opt/ml/processing/input',\n",
+       "    'S3DataType': 'S3Prefix',\n",
+       "    'S3InputMode': 'File',\n",
+       "    'S3DataDistributionType': 'FullyReplicated',\n",
+       "    'S3CompressionType': 'None'}},\n",
+       "  {'InputName': 'code',\n",
+       "   'AppManaged': False,\n",
+       "   'S3Input': {'S3Uri': 's3://sagemaker-us-east-1-934110659707/sagemaker-scikit-learn-2022-01-11-20-25-52-392/input/code/HelloBlazePreprocess.py',\n",
+       "    'LocalPath': '/opt/ml/processing/input/code',\n",
+       "    'S3DataType': 'S3Prefix',\n",
+       "    'S3InputMode': 'File',\n",
+       "    'S3DataDistributionType': 'FullyReplicated',\n",
+       "    'S3CompressionType': 'None'}}],\n",
+       " 'ProcessingOutputConfig': {'Outputs': [{'OutputName': 'output-1',\n",
+       "    'S3Output': {'S3Uri': 's3://sagemaker-us-east-1-934110659707/sagemaker-scikit-learn-2022-01-11-20-25-52-392/output/output-1',\n",
+       "     'LocalPath': '/opt/ml/processing/output/train',\n",
+       "     'S3UploadMode': 'EndOfJob'},\n",
+       "    'AppManaged': False},\n",
+       "   {'OutputName': 'output-2',\n",
+       "    'S3Output': {'S3Uri': 's3://sagemaker-us-east-1-934110659707/sagemaker-scikit-learn-2022-01-11-20-25-52-392/output/output-2',\n",
+       "     'LocalPath': '/opt/ml/processing/output/test',\n",
+       "     'S3UploadMode': 'EndOfJob'},\n",
+       "    'AppManaged': False}]},\n",
+       " 'ProcessingJobName': 'sagemaker-scikit-learn-2022-01-11-20-25-52-392',\n",
+       " 'ProcessingResources': {'ClusterConfig': {'InstanceCount': 1,\n",
+       "   'InstanceType': 'ml.m5.large',\n",
+       "   'VolumeSizeInGB': 30}},\n",
+       " 'StoppingCondition': {'MaxRuntimeInSeconds': 86400},\n",
+       " 'AppSpecification': {'ImageUri': '683313688378.dkr.ecr.us-east-1.amazonaws.com/sagemaker-scikit-learn:0.20.0-cpu-py3',\n",
+       "  'ContainerEntrypoint': ['python3',\n",
+       "   '/opt/ml/processing/input/code/HelloBlazePreprocess.py']},\n",
+       " 'RoleArn': 'arn:aws:iam::934110659707:role/service-role/AmazonSageMaker-ExecutionRole-20220111T121707',\n",
+       " 'ProcessingJobArn': 'arn:aws:sagemaker:us-east-1:934110659707:processing-job/sagemaker-scikit-learn-2022-01-11-20-25-52-392',\n",
+       " 'ProcessingJobStatus': 'Completed',\n",
+       " 'ProcessingEndTime': datetime.datetime(2022, 1, 11, 20, 30, 48, 540000, tzinfo=tzlocal()),\n",
+       " 'ProcessingStartTime': datetime.datetime(2022, 1, 11, 20, 30, 29, 178000, tzinfo=tzlocal()),\n",
+       " 'LastModifiedTime': datetime.datetime(2022, 1, 11, 20, 30, 49, 145000, tzinfo=tzlocal()),\n",
+       " 'CreationTime': datetime.datetime(2022, 1, 11, 20, 25, 52, 897000, tzinfo=tzlocal()),\n",
+       " 'ResponseMetadata': {'RequestId': '60df6879-309a-4a83-826d-f99ec84a55de',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '60df6879-309a-4a83-826d-f99ec84a55de',\n",
+       "   'content-type': 'application/x-amz-json-1.1',\n",
+       "   'content-length': '2211',\n",
+       "   'date': 'Tue, 11 Jan 2022 20:34:29 GMT'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sklearn_processor.jobs[-1].describe()"
    ]
@@ -272,9 +357,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "python3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
@@ -286,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
