--- a/lesson3/Lesson 3, Exercise 1 - Lambda Function.ipynb
+++ b/lesson3/Lesson 3, Exercise 1 - Lambda Function.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "{'s3-dataset-uri': 'udacity-sagemaker-solutiondata2021/l3e1/reviews_Musical_Instruments_5.json.zip'}"
+       "{'s3UriKey': 'udacity-sagemaker-solutiondata2021/l3e1/reviews_Musical_Instruments_5.json.zip'}"
       ]
      },
      "execution_count": 1,
@@ -83,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
