--- a/lesson3/Lesson 3, Exercise 2 - Invoking Lambda Functions.ipynb
+++ b/lesson3/Lesson 3, Exercise 2 - Invoking Lambda Functions.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "98c45b44",
    "metadata": {},
    "source": [
     "# UDACITY : Designing Your First Workflow - Invoking Lambda Functions"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1639b0d",
    "metadata": {},
    "source": [
     "In the last exercise, you created your own Lambda function. Without realizing it, you've already practiced invoking as well! Launching a test event is an example of synchronous invocation. In this exercise, you will continue working on the lambda function 'PreprocessLambda' from the previous exercise. However, you'll practice a different way to launch asynchronous invocation, and also practice the setup of an asynchronous invocation.\n",
@@ -19,7 +17,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a766cf8",
    "metadata": {},
    "source": [
     "## Exercise: Synchronous invocation "
@@ -27,7 +24,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd13ac5d",
    "metadata": {},
    "source": [
     "Synchronous invocations occur when a call is made to a Lambda function and a response is waited for. The example we're asking you to implement is a CLI invocation, but Lambda functions can also be placed behind Amazon's API Gateway for potential users to directly invoke a Lambda function. This, in turn, could be the interface that you expose to users to allow them to interact with other AWS resources. These types of invocations are great for \"get\" and \"set\" methods."
@@ -35,7 +31,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5737584f",
    "metadata": {},
    "source": [
     "Your task is to synchronously invoke the Lambda function you implemented in the last exercise using the CLI. The following documentation may be useful to you: https://docs.aws.amazon.com/lambda/latest/dg/invocation-sync.html \n",
@@ -45,18 +40,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "335d9982",
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"StatusCode\": 200,\n",
+      "    \"ExecutedVersion\": \"$LATEST\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash \n",
-    "echo \"Example CLI Command.\""
+    "aws lambda invoke --function-name lambda-udacity --payload '{\"s3UriKey\": \"udacity-ml-workflow/lambda/reviews_Musical_Instruments_5.json.zip\"}' response.json"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3ec33b50",
    "metadata": {},
    "source": [
     "## Exercise: Asynchronous invocation "
@@ -64,7 +68,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "748515a8",
    "metadata": {},
    "source": [
     "Asynchronous invocations occur when a service invokes lambda but does not wait for a response. The two most popular services that utilize asynchronous invocations are S3 (the storage we've been using) and SNS (Simple Notification Service.) We'll be setting up asynchronous invocations on an S3 bucket for our preprocessing function."
@@ -72,7 +75,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0764490",
    "metadata": {},
    "source": [
     "Your task is to setup a trigger for the Lambda function we've been working  whenever a file is uploaded to a specific folder in S3. You will need to do the following:\n",
@@ -88,7 +90,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edbd4522",
    "metadata": {},
    "source": [
     "## Lambda Handler Starter Code: Parsing S3 Upload Event. "
@@ -96,8 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5c3d3277",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,19 +105,34 @@
     "# The code to parse S3 event has provided to you, you only need to call the `preprocess` from the HelloBlazePreprocessLambda.py and return the status.\n",
     "import json\n",
     "import urllib\n",
+    "from HelloBlazePreprocessLambda import preprocess\n",
     "\n",
-    "for r in event['Records']:\n",
-    "        bucket = r['s3']['bucket']['name']\n",
-    "        key = urllib.parse.unquote_plus(r['s3']['object']['key'], encoding='utf-8')\n",
-    "        uri = \"/\".join([bucket, key])"
+    "def lambdahandler(event, context):\n",
+    "    for r in event['Records']:\n",
+    "            bucket = r['s3']['bucket']['name']\n",
+    "            key = urllib.parse.unquote_plus(r['s3']['object']['key'], encoding='utf-8')\n",
+    "            uri = \"/\".join([bucket, key])\n",
+    "            preprocess(uri)\n",
+    "    return {\n",
+    "        'statusCode': 200,\n",
+    "        'body': \"Good to go!\"\n",
+    "        }\n",
+    "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "python3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
@@ -129,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
