--- a/project/starter.ipynb
+++ b/project/starter.ipynb
@@ -1083,10 +1083,13 @@
  ],
  "metadata": {
   "instance_type": "ml.t3.medium",
+  "interpreter": {
+   "hash": "6d46af94c2bbce495f1e668725902fa517c90b1782bcfe2fce0dd9868df553d3"
+  },
   "kernelspec": {
    "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/datascience-1.0"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1098,7 +1101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
